5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1643_1054.log
== TEST (2019-04-08 18:50:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
if (soma = 2x + y = 3);
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    if (soma = 2x + y = 3);
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
if (2x + y = 3);
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    if (2x + y = 3);
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:51:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
if (soma = 2 * x + y = 3);
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    if (soma = 2 * x + y = 3);
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
if (soma = (2 * x + y = 3));
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    if (soma = (2 * x + y = 3));
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:53:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
soma = (2 * x + y = 3)
if (soma = 3);
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    soma = (2 * x + y = 3)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
soma = 2 * x + y 
if (soma = 3);
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 7
    if (soma = 3);
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
soma = 2 * x + y 
if (soma == 3);
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 7
    if (soma == 3);
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
soma = 2 * x + y 
if (soma == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
soma = 2 * x + y 
if (soma == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:55:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de X: "))
y = float(input("valor de Y: "))
soma = 2 * x + y 
if (soma == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.203842
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
